# weave

./: LICENSE  README.md  weave.cabal
app/: Main.hs
src/Weave/: Core.hs  Grad.hs  Models.hs  Ops.hs  Shape.hs
test/: Spec.hs
